--- a/css/index.css
+++ b/css/index.css
@@ -15,9 +15,8 @@
     /*background-image: radial-gradient(circle at top right, #ffc848, #ff8208);*/
     border-radius: 5px;
     padding-top: 10px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
     height: 300px;
-    border: 1px solid #ccc;
 }
 .login h2{
     display: none;
@@ -28,29 +27,30 @@
     width: 200px;
     font-size: 1.1em;
     font-weight: bold;
-    margin-left: 20px;
+    margin-left: 5px;
+    
+
 }
 .login input{
-    width: 180px;
-    height: 20px;
+    width: 200px;
+    height: 18px;
     padding: 2px 3px 3px 10px;
     border: none;
     border-bottom: 1px solid #ccc;
     display: block;
     
-    
 }
 #userId{
-    margin: 10px 0 30px 20px;
+    margin: 10px 0 30px 0;
 }
 
 #userPw{
-    margin: 10px 0 20px 20px;
+    margin: 10px 0 20px 0;
 }
 .login button{
     font-family: "NotoSansKR_Regular";
     letter-spacing: 2px;
-    width: 200px;
+    width: 215px;
     height: 35px;
     color: #fff;
     font-weight: bold;
@@ -58,7 +58,6 @@
     background-image: linear-gradient(to right top, #747474 0%, #BDBDBD 100%);
     border-radius: 10px;
     border: none;
-    margin-left: 15px;
 }
 
 .login button:hover{
@@ -83,7 +82,6 @@
 
 .findPW::before {
     content: "|";
-    color: #000;
     margin: 0 5px 0 4px;
 }
 /*로그인 영역 종료*/
@@ -91,10 +89,10 @@
 /*히스토리 영역 시작*/
 .history{
     margin-top: 20px;
-    border: 1px solid #ccc;
+    border: 1px dotted #ccc;
     border-radius: 5px;
     padding: 15px;
-    background-image: linear-gradient(to top left, #fff 40%, #FFEFEF 100%);
+    background-image: linear-gradient(to bottom right, #fff 0%, #FFEFEF 100%);
     height: 260px;
 
 }
@@ -136,7 +134,7 @@
 
 /*메인페이지 영역 시작*/
 #mainPage{
-    width: 584px;
+    width: 520px;
     margin: 0px 10px;
 }
 
@@ -144,14 +142,8 @@
     display: inline-block;
     margin: 10px;
     font-size: 1.3em;
+    
 }
-
-.imgBox:hover img{
-    width: 170px;
-    height: 150px;
-    transition: 0.7s;
-}
-
 .imgBox img{
     width: 150px;
     height: 122px;
@@ -168,13 +160,13 @@
 }
 #comming img{
 
-    background: linear-gradient(to left top, #fff 0%, #f6f6f6 50%, #FFC19E 100%);
+    background: linear-gradient(to left top, #fff 0%, #f6f6f6 50%, #FFD8D8 100%);
 }
 #new img{
     background: linear-gradient(to top, #fff 0%, #f6f6f6 50%, #FFD8D8 100%);
 }
 #hot img{
-    background: linear-gradient(to right top, #fff 0%, #f6f6f6 50%, #FF2424 100%);
+    background: linear-gradient(to right top, #fff 0%, #f6f6f6 50%, #FFD8D8 100%);
 
 }
 #man img{
@@ -195,10 +187,12 @@
 
 /*이용안내, 고객지원, 자주묻는질문 영역시작*/
 .board{
-    margin-left: 30px;
-    width: 520px;
+    margin: 0px 0 0 30px;
+    width: 470px;
     height: 210px;
     display: inline-block;
+
+    
 }
 
 .board::before {
@@ -206,7 +200,7 @@
     position: relative;
     top: 38px;
     display: inline-block;
-    width: 520px;
+    width: 470px;
     height: 1.5px;
     background: linear-gradient(to right bottom, #fff 0%, #D5D5D5 50%, #A6A6A6 100%);
 }
@@ -219,7 +213,7 @@
 }
 .board h2{
     float: left;
-    font-size: 1.05em;
+    font-size: 1em;
 }
 
 .board h2 a{
@@ -229,28 +223,26 @@
     border: 1px solid #c9c9c9;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    background: linear-gradient(to bottom, #F6F6F6 0%, #D5D5D5 100%);
+    background-image: linear-gradient(to bottom, #F6F6F6 0%, #D5D5D5 100%);
     
 }
 .board section:target h2 a{
     color: #ff4911;
     border-bottom: 1px solid #fff;
     font-size: 1.1em;
-    background: linear-gradient(to bottom, #fff 0%, #eee 100%);
-    transition: 0.5s;
-    border: 1px solid #ccc;
 }
 
 .board ul{
     position: absolute;
     top: 40px;
     left: 0;
-    width: 100%;
+    width: 75%;
     background-color: #fff;
+    
 }
 
 .board ul li{
-    margin-bottom: 8px;
+    margin-bottom: 5px;
     border-radius: 5px;
     padding-left: 5px;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.3);
@@ -261,25 +253,22 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; /*텍스트가 영역 밖으로 나갈정도의 크기일때 말줄임표 (...) white-space: nowrap;  overflow: hidden; 과 같이 세트*/
-    font-size: 1.2em; 
-    margin-left: 5px;
+    font-size: 1.1em; 
 }
 .board ul li a:hover {
     text-decoration: underline;
     font-size: 1.15em;
     font-weight: bold;
-    transition: 0.3s;
-    
 }
 
 .board ul a:hover::before {
-    content: "✓ ";
+    content: "☞ ";
     text-decoration: none;
     
 }
 
 .board ul li:nth-child(2n+1){
-    background-image: linear-gradient(to right, #F6F6F6 0%, #fff 100%);
+    background-image: linear-gradient(to right, #cecaca 0%, #fff 100%);
     
 }
 .board ul li:nth-child(2n){
@@ -289,15 +278,10 @@
 
 .board .more{
     position: absolute;
-    top: 5px;
+    top: 0;
     right: 0;
-    font-size: 1.2em;
-    font-weight: 100;
-}
-.board .more::before{
-    content: "✚";
-    color: #F29661;
-    margin-right: 2px;
+    padding: 8px;
+
 }
 /*이용안내, 고객지원, 자주묻는질문 영역끝*/
 
@@ -305,28 +289,38 @@
 .serch{
     font-size: 1.2em;
     display: inline-block;
-    width: 100%;
-    margin: 30px 0 0 30px;
+    width: 400px;
+    margin-left: 20px;
 
 }
+
 .serch label{
+    color: #3F0000;
     margin-bottom: 5px;
-    font-size: 1.1em;
+    font-size: 1.2em;
+
 }
 
 .serch input{
-    margin-left: 15px;
-    width: 315px;
-    display: inline-block; 
+    width: 300px;
+    display: inline-block;
+    border:none;
+    border-top: 2px solid #3F0000;
+    border-bottom: 2px solid #3F0000;
+    border-radius: 3px;
+    
 }
 
 .serch button{
-    padding: 5px 13px;
+    padding: 5px 10px;
     margin-left: 5px;
     color: #fff;
-    background: #747474;
+    background: #3F0000;
+
     border-radius: 7px;
     border: none;
+    
+    
 }
 /*serch 영역 종료*/
 
@@ -337,7 +331,7 @@
 /*신규 이벤트 영역 시작*/
 .event{
     box-shadow: 9px 6px 5px rgba(0, 0, 0, 0.2);
-    background-image: linear-gradient(to bottom, #F6F6F6 0%, #f4f4f4 100%);
+    background-image: linear-gradient(to bottom, #F6F6F6 0%, #f4f4f477 100%);
     border: 1px solid #F6F6F6;
     
 }
@@ -366,7 +360,7 @@
     margin-bottom: 10px;
     font-size: 1.2em;
     overflow: hidden;
-    transition: 0.5s;
+    transition: height 0.5s;
     visibility: hidden;
     
 }
@@ -407,20 +401,10 @@
     display: block;
 }
 .sale p {
-    height: 0;
     padding: 10px 0;
-    margin-top: 5px;
     line-height: 1.3;
     text-align: center;
     font-size: 1.2em;
-    overflow: hidden;
-    transition: 0.5s;
-    visibility: hidden;
-}
-
-.sale:hover p{
-    visibility: visible;
-    height: 75px;
 }
 .sale em{
     font-style: normal;
